--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,11 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "dotenv": "^17.2.2"
+    "mysql2": "^3.14.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
