--- a/.env.template
+++ b/.env.template
@@ -1,15 +1,5 @@
-#PORT=3000
-#NODE_ENV=development
-
+#env para el db en el docker-compose
 #MYSQL_ROOT_PASSWORD=
 #MYSQL_DATABASE=
 #MYSQL_USER=
 #MYSQL_PASSWORD=
-
-
-#conexion para el backend
-#DB_HOST=mysql
-#DB_PORT=3306
-#DB_NAME=
-#DB_USER=         
-#DB_PASSWORD=
