--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - "3000:3000"
     env_file:
       - ./backend/.env
+    environment:
+      - DB_HOST=mysql_db
+      - DB_PORT=3306
     volumes:
       - ./backend:/app
       - /app/node_modules
@@ -21,14 +24,20 @@ services:
       - ./frontend:/app
       - /app/node_modules
 
-  # db:   
-  #   image: mongo:7   # o mysql:8
-  #   container_name: mydb
-  #   ports:
-  #     - "27017:27017"  # mongo
-  #     - "3306:3306"    # mysql
-  #   volumes:
-  #     - db_data:/data/db
+  mysql:
+    image: mysql:8
+    container_name: mysql_db
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    volumes:
+      - mysql_data:/var/lib/mysql
+      - ./DB/init.sql:/docker-entrypoint-initdb.d/init.sql  
+    restart: unless-stopped
 
 volumes:
-  db_data:
+  mysql_data:
