--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mysql2": "^3.14.5"
+    "mysql2": "^3.15.0",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.1",
+    "@types/sequelize": "^4.28.20",
     "eslint": "^9.35.0",
     "install": "^0.13.0",
     "nodemon": "^3.1.10",
