--- a/backend/package.json
+++ b/backend/package.json
@@ -23,13 +23,18 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "@types/sequelize": "^4.28.20",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.35.0",
     "install": "^0.13.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "npm": "^11.6.0",
     "prettier": "^3.6.2",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   }
