configurado jest y agregado atributo rol en la db

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
+    "test": "jest",
     "dev": "nodemon --watch src --exec npx ts-node src/server.ts",
     "lint": "eslint 'src/**/*.ts'"
   },
@@ -29,10 +30,8 @@
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.35.0",
-    "install": "^0.13.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.10",
-    "npm": "^11.6.0",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.4",
