--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
   "type": "commonjs",
   "dependencies": {
     "@types/cors": "^2.8.19",
-    "bcryptjs": "^3.0.2",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
