--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -43,6 +43,6 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/__tests__"],
   "exclude": ["node_modules"]
 }
