--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,9 @@ services:
       - app-network
 
   backend:
-    build: ./backend
+    build:
+      context: './backend'
+      target: builder
     container_name: backend
     ports:
       - "3000:3000"
@@ -39,6 +41,9 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
+
+    command: npm run dev 
+    
     depends_on:
       mysql:
         condition: service_healthy
