--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.6",
+    "nodemailer": "^7.0.10",
     "sequelize": "^6.37.7",
     "tsconfig-paths": "^4.2.0",
     "zod": "^4.1.12"
@@ -41,6 +42,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.3",
     "eslint": "^9.35.0",
