Actualizado template del env

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,9 +1,31 @@
-#conexion para el backend
 #PORT=3000
 #NODE_ENV=development
 
+#MYSQL_ROOT_PASSWORD=
+#MYSQL_DATABASE=
+#MYSQL_USER=
+#MYSQL_PASSWORD=
+
+#conexion para el backend
 #DB_HOST=
 #DB_PORT=
 #DB_NAME=
-#DB_USER=         
+#DB_USER=        
 #DB_PASSWORD=
+
+#variables para cloudinary
+#CLOUDINARY_API_NAME=
+#CLOUDINARY_API_KEY=
+#CLOUDINARY_API_SECRET=
+
+#para recuperar contrasenas
+#EMAIL_USER=
+#EMAIL_PASS=
+
+# JWT Tokens
+#JWT_EXPIRES_IN=24h
+#JWT_REFRESH_EXPIRES_IN=30d
+
+# JWT Secrets
+#JWT_SECRET=
+#JWT_REFRESH_SECRET=
