--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,10 @@
-#env para el db en el docker-compose
 #MYSQL_ROOT_PASSWORD=
 #MYSQL_DATABASE=
 #MYSQL_USER=
 #MYSQL_PASSWORD=
+
+#DB_HOST=
+#DB_PORT=
+#DB_NAME=
+#DB_USER=
+#DB_PASSWORD=
